src/assets/scss/partials/footer.scss
.footer {
    background-color: #1d1d1d;
    color: #808080;

    .footer-get-started {
        width: 176px;
    }

    h3 {
        min-height: 22px;
    }
    .list-unstyled li {
        margin-bottom: 13px;
    }

    .list-unstyled li a {
        color: #fff;
        font-size: 16px;
    }

    .copyright {
        font-size: 11px;
        line-height: 13px;
    }

    .social-link {
        color: #ffffff;
        font-size: 20px;
    }

    .footer-about-text {
        max-width: 500px;
    }

    .right-get-started {
        align-items: flex-end;
    }

    @media (max-width: $screen-xs-max) {
        h3 {
            font-size: 16px;
        }

        .copyright {
            img {
                max-width: 143px;
                width: 100%;
                margin: 0 auto;
            }
        }

        .right-get-started {
            align-items: center;
            margin-top: 6 * $spacer;
        }

        .list-unstyled {
            margin-top: 10px;
        }

        .footer-about-text {
            margin-left: auto;
            margin-right: auto;
        }
    }

    &.footer-compact {
        background-color: #333;
    }
}

